change page title and description, change css for small mobile screen, fixed starred tab button on mobile

--- a/src/FileList/FileList.css
+++ b/src/FileList/FileList.css
@@ -121,3 +121,9 @@
 	font-size: 0.8rem;
 	width: 20%;
 }
+
+@media only screen and (max-width: 580px) {
+	.starIcon {
+		margin-left: 7px;
+	}
+}
