--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -49,6 +49,7 @@
     flex-flow: row wrap;
     justify-content: flex-start;
     align-items: center;
+    justify-content: center;
     font-size: 0.8rem;
     margin-left: 20px;
 }
@@ -204,7 +205,7 @@
         justify-content: flex-end;
         height: auto;
         order: 1;
-        margin-top: 40px;
+        margin-top: 30px;
     }
 
     .search-field {
@@ -217,6 +218,10 @@
 
     .header-path {
         width: 100%;
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: center;
+        margin-top: -10px;
 
     }
     .pathLink {
