--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -86,7 +86,7 @@
         display: block;
         position: absolute;
         right: 0px;
-        width: 180px;
+        width: auto;
         text-align: right;
         top: 20px;
     }
@@ -120,7 +120,7 @@
     }
 
     .imageTop-Span {
-        width: 100%;
+        width: 110%;
     }
 
 }
