--- a/src/Modals/Modals.css
+++ b/src/Modals/Modals.css
@@ -83,7 +83,7 @@
 }
 
 .modalContainer > .copyMoveBox {
-    height: 300px;
+    height: auto;
     position: relative;
     top: 50%;
     left: 50%;
@@ -137,7 +137,9 @@
 /* --- Copy Modal --- */
 
 .relocateCtn {
-    height: 450px;
+    height: auto;
+    min-height: 150px;
+    max-height: 150px;
     width: 450px;
     border: 1px solid #c5c5c5;
     overflow-y: auto;
@@ -188,10 +190,37 @@
 @media only screen and (max-width: 580px) {
     .modalBox {
         width: 60%;
+        height: auto;
     }
 
     .relocateCtn {
         width: 100%;
+    }
+
+    .modalsButtonsContainer {
+        width: 100%;
+        flex-flow: column wrap;
+        justify-content: center;
+        align-items: center;
+    }
+    .modalButtons {
+        width: 90%;
+        order: 2;
+        text-align: center;
+        display: block;
+        padding: 10px 0;
+        margin-top: 10px;
+    }
+
+    .modalButtons.blueButtons {
+        order: 1;
+        margin-left: 0;
+        margin-top: 20px;
+    }
+
+    .modalContainer > .modalBox > form > input {
+        height: 30px;
+        padding-left: 5px;
     }
 }
 
